--- a/styles/style.css
+++ b/styles/style.css
@@ -236,6 +236,7 @@ h1, h2 {
   display: flex;
   justify-content: end;
   gap: 0.5rem;
+  flex-wrap: wrap;
 }
 .technologies span {
   border: solid #e0b1cb 1px;
